<resources>
    <string name="app_name">Cyclotrack</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="trip_summaries_fragment_label">Trip Summaries Fragment</string>
    <string name="routes_fragment_label">Routes</string>
    <string name="route_details_fragment_label">Route Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="zero">0.0</string>
    <string name="location_fix_obtained">Location fix obtained</string>
    <string name="trip_summary_image_description">Trip map or default image</string>
    <string name="trip_title_placeholder">Trip Title</string>
    <string name="time_placeholder">HH:mm</string>
    <string name="time_ago_placeholder">XX days ago</string>
    <string name="cyclotrack_summary_map_id">c2e079ebb492f6ef</string>
    <string name="start_label">START</string>
    <string name="pause_label">PAUSE</string>
    <string name="stop_label">STOP</string>
    <string name="resume_label">RESUME</string>
    <string name="label_placeholder">LABEL</string>
    <string name="action_cleanup">Cleanup</string>
    <string name="details_menu_title_edit">Edit</string>
    <string name="details_menu_title_delete">Delete</string>
    <string name="preferences_paired_ble_devices_key">paired_ble_devices</string>
    <string name="preferences_profile_key">preferences_profile</string>
    <string name="scanning_for_ble_devices">Scanning for BLE devices...</string>
    <string name="saved_devices_label">Linked devices</string>
    <string name="discovered_devices_label">Discovered devices</string>
    <string name="sensor_linking_instructions">Link up to three devices, each of a unique supported type: cadence, speed, and heart rate.</string>
    <string name="bike_sensor_linking_instructions">Link up to three devices. It is recommended that you only link sensors that are attached to this bike, such as cadence and speed.</string>
    <string name="body_sensor_linking_instructions">Link up to three devices. It is recommended that you only link sensors attached to your body, like heart rate monitors.</string>
    <string name="preferences_biometrics_key">biometrics</string>
    <string name="preference_key_biometrics_user_sex">preference_key_biometrics_user_sex</string>
    <string name="preference_key_biometrics_user_weight">preference_key_biometrics_user_weight</string>
    <string name="preference_key_biometrics_user_height">preference_key_biometrics_user_height</string>
    <string name="preference_key_biometrics_user_age">preference_key_biometrics_user_age</string>
    <string name="preference_key_biometrics_user_vo2max">preference_key_biometrics_user_vo2max</string>
    <string name="preference_key_biometrics_user_restingHeartRate">preference_key_biometrics_user_restingHeartRate</string>
    <string name="preference_key_biometrics_user_maxHeartRate">preference_key_biometrics_user_maxHeartRate</string>
    <string name="preference_key_system_of_measurement">display_units</string>
    <string name="preference_key_biometrics_user_dob">preference_key_biometrics_user_date_of_birth</string>
    <string name="preference_key_biometrics_use_google_fit_biometrics">preference_key_biometrics_use_google_fit_biometrics</string>
    <string name="preferences_clear_preferences_key">preferences_clear_preferences</string>
    <string name="preference_biometrics_instruction_text">This information is used to estimate Calorie burn during rides.</string>
    <string name="preference_biometrics_instruction_text_verbose">This information is used to estimate Calorie burn during rides. Fill in your weight to get a METs-based Calorie estimate. If you have linked a heart rate monitor, fill in your sex, date of birth (age), and VO2Max for a more accurate estimate.</string>
    <string name="preference_biometrics_hrm_calorie_instruction_text">If you have a heart rate monitor linked, specify your sex, date of birth, and resting heart rate to enable heart rate based estimates.</string>
    <string name="preference_biometrics_hrm_net_calorie_instruction_text">If you would like to display net Calorie burn instead of gross, please include your height. This will subtract your estimated basal metabolic rate from heart rate based Calorie estimates.</string>
    <string name="preference_biometrics_sex_field_heading">Sex</string>
    <string name="preference_biometrics_label_sex_male">Male</string>
    <string name="preference_biometrics_label_sex_female">Female</string>
    <string name="preference_biometrics_label_dob">Date of birth</string>
    <string name="preference_biometrics_label_restingHeartRate">Resting heart rate</string>
    <string name="biometric_preferences_no_data_hint">This information is used to estimate calorie burn during rides. Enter your weight to enable calorie burn estimates.</string>
    <string name="biometrics_preferences_weight_only_hint">Calorie burn will be estimated based on average speed.</string>
    <string name="biometrics_preferences_gross_calories_hint">Heart rate data will be used to estimate gross calorie burn when available.</string>
    <string name="biometric_resources_net_calories_hint">Heart rate data will be used to estimate net calorie burn when available.</string>
    <string name="preferences_dashboard_brightness_key">preference_dashboard_brightness</string>
    <string name="preferences_dashboard_brightness_toggle_key">dashboard_brightness_toggle</string>
    <string name="preferences_system_of_measurement_key">display_units</string>
    <string name="preferences_privacy_policy_key">privacy_policy</string>
    <string name="preference_key_wheel_circumference">wheel_circumference</string>
    <string name="details_menu_title_export_csv">Export CSV</string>
    <string name="details_menu_title_export_xlsx">Export XLSX</string>
    <string name="details_menu_title_export_gpx">Export GPX</string>
    <string name="notification_export_trip_in_progress_id">notification_export_trip_in_progress_id</string>
    <string name="notification_export_trip_in_progress_name">Export ride data in progress</string>
    <string name="notification_export_trip_id">notification_export_trip_complete_id</string>
    <string name="notification_export_trip_name">Export ride data complete</string>
    <string name="notification_channel_description_export_trip">Indicates that data has been exported.</string>
    <string name="intent_action_delete_exported_data">com.kvl.cyclotrack.action.DELETE_EXPORTED_DATA</string>
    <string name="bearing_icon_description">Bearing icon</string>
    <string name="action_stitch">Stitch</string>
    <string name="action_summaryview_multiselect_enabled">com.kvl.cyclotrack.action_summaryview_multiselect_enabled</string>
    <string name="action_clear_multiselect">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="preferences_key_strava">preferences_key_strava</string>
    <string name="preferences_sync_with_strava_title">Connect with Strava</string>
    <string name="preferences_sync_with_strava_summary">Sign in to Strava to sync your workouts</string>
    <string name="preferences_disconnect_strava_title">Disconnect from Strava</string>
    <string name="preferences_disconnect_strava_summary">Sign out from Strava to stop syncing activities</string>
    <string name="strava_sync_dialog_description">Sign in to Strava to sync your workouts. Data from your rides, including location, heart rate, speed, and cadence will be shared with and stored in Strava.</string>
    <string name="strava_logout_dialog_message">You are about to logout from your Strava Account and stop sharing data with Strava. Your rides will no longer be synchronized with Strava. If you would like to remove your Cyclotrack rides from Strava please visit the Strava app.</string>
    <string name="preferences_key_google_fit">preferences_key_google_fit</string>
    <string name="preferences_sync_with_google_fit_title">Sync with Google Fit</string>
    <string name="preferences_sync_with_google_fit_summary">Sign in to Google Fit to sync your workouts</string>
    <string name="preferences_disconnect_google_fit_title">Disconnect from Google Fit</string>
    <string name="preferences_disconnect_google_fit_summary">Stop syncing data between Cyclotrack and Google Fit</string>
    <string name="notification_id_trip_in_progress">notification_id_trip_in_progress</string>
    <string name="notification_trip_in_progress_title">Ride in progress</string>
    <string name="notification_export_trip_in_progress_message">Tap to return to dashboard</string>
    <string name="action_initialize_trip_service">com.kvl.cyclotrack::action_initialize_trip_service</string>
    <string name="action_start_trip_service">com.kvl.cyclotrack::action_start_trip_service</string>
    <string name="action_pause_trip_service">com.kvl.cyclotrack::action_pause_trip_service</string>
    <string name="action_resume_trip_service">com.kvl.cyclotrack::action_resume_trip_service</string>
    <string name="action_stop_trip_service">com.kvl.cyclotrack::action_stop_trip_service</string>
    <string name="action_shutdown_trip_service">com.kvl.cyclotrack::action_shutdown_trip_service</string>
    <string name="notification_channel_name_trip_in_progress">Ride in progress</string>
    <string name="gps_disabled_message">GPS disabled</string>
    <string name="initial_inspiring_message">Ready to start your first ride? Touch the bike button and let\'s get moving!</string>
    <string name="details_menu_title_sync">Sync</string>
    <string name="google_fit_sync_dialog_description">Sign in to Google Fit to sync your workouts. Data from your rides, including location, heart rate, speed, and cadence will be shared with Google and stored in Google Fit. Google Fit will store your rides in the journal and your rides will count toward your weekly goals. Your Google Fit height, weight, and resting heart rate will be used to estimate calorie burn if available.</string>
    <string name="google_fit_logout_dialog_message">You are about to logout from your Google Account and stop sharing data with Google. Your rides will no longer be synchronized with Google Fit.</string>
    <string name="details_menu_title_unsync">Unsync</string>
    <string name="useGoogleFitBiometricsDialog_title">Use Google Fit Biometrics</string>
    <string name="useGoogleFitBiometricsDialog_message">Enable this option to read height, weight, and resting heart rate data from Google Fit. If this option is disabled, the values stored in Cyclotrack will be used. Update this option at any time in biometrics settings.</string>
    <string name="preference_key_useAutoCircumference">useAutoCircumference</string>
    <string name="preference_key_bike_specs">preference_key_bike_specs</string>
    <string name="switch_preference_useAutoCircumference_description">Let Cyclotrack use GPS to calibrate circumference</string>
    <string name="preference_key_bike_mass">bike_mass</string>
    <string name="preferences_key_enable_analytics">preference_key_enable_analytics</string>
    <string name="route_detail_distance_label">Distance</string>
    <string name="route_detail_ascent_label">Ascent</string>
    <string name="route_detail_descent_label">Descent</string>
    <string name="route_detail_points_label">Points</string>
    <string name="route_detail_type_label">Route type</string>
    <string name="route_detail_elevation_range_label">Elevation range</string>
    <string name="route_detail_steepest_climb_label">Steepest climb</string>
    <string name="route_detail_steepest_descent_label">Steepest descent</string>
    <string name="route_detail_elevation_profile_label">Elevation profile</string>
    <string name="route_detail_grade_profile_label">Grade profile</string>
    <string name="route_detail_rename_button">Rename route</string>
</resources>